# casana

./: .gitignore  README.md  config.yaml  pyproject.toml
best_model_results/: README.md
best_model_results/attention_dilated_conv1d/: metrics.json
best_model_results/pinn_peak_detector/: metrics.json
best_model_results/simplest_possible/: metrics.json
model_architectures/: README.md
model_architectures/components/: attention.md  common.md  gradient_refinement.md  mlp_blocks.md  multi_scale_cnn.md  spectral_branch.md
model_architectures/models/: attention_dilated_conv1d.md  base_model.md  dual_pathway_fft.md  multi_scale_conv1d.md  pinn_peak_detector.md  simplest_possible.md  spectral_peak_detector.md  transformer_conv1d.md
multi_experiment_run/: multi_config.yaml  run_experiments.py
notes/: architecture_plan.md  signal_generation.md
notes/model_architectures/: dual_pathway_fft.md
src/: interview.py  train.py
src/config/: config.py
src/losses/: __init__.py  base_loss.py  gradient_aware_loss.py  loss_analysis.py  peak_loss.py  simple_mse.py
src/models/: __init__.py  attention_dilated_conv1d.py  base_model.py  dual_pathway_fft.py  multi_scale_conv1d.py  pinn_peak_detector.py  simplest_possible.py  spectral_peak_detector.py  transformer_conv1d.py
src/models/components/: README.md  __init__.py  attention.py  common.py  gradient_refinement.py  mlp_blocks.py  multi_scale_cnn.py  spectral_branch.py
src/utils/: curriculum.py  experiment_tracker.py  peak_detection.py  plotter.py  signal_generator.py  training_monitor.py
